@@ -1,3 +1,7 @@
+2005-11-02  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
+
+	* lyxlength.h: undefine macros that clash with solaris/x86 (bug 992)
+
 2005-11-03  Michael Gerz  <michael.gerz@teststep.org>
 
 	* messages.C: fix crash and localization on MinGW/Windows platform
